Added category options

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="Css/main.css">
 </head>
 <body>
+    <select id="cat-list">
+        <option value="">Please Choose a Category</option>
+        
+    </select>
+    <br><br>
+
     <button class="glow-on-hover" id="get-joke" type="button">Facts About CHUCK NORRIS.</button>
     <img height="100" id="loader" src="Images/source.gif">
     <br><br>
